@@ -18,3 +18,9 @@
  non de la vitesse de l'ordinateur)
  -> Réduction de la taille du personnage afin qu'il tienne dans une seule case
  -> Ajout des obstacles, de leur carte et de leur hitbox
+
++ 20/04/14 (Easter update)
+----------
+ -> Ajout d'une fonction de création de labyrinthe
+ -> Modification du positionnement des obstacles
+ -> Réduction du terrain (pour limiter les lags et rendre le jeu finissable)
